--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
@@ -53,7 +53,7 @@ howmany:
 
 line:
   messages:
-  - the current line is represented by `this.ppu.scanline`
+  - the current line is represented by ```javascript this.ppu.scanline```
   responses:
   - ...questions
 
