--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -53,7 +53,7 @@ howmany:
 
 line:
   messages:
-  - la línea actual está representada por `this.ppu.scanline`
+  - la línea actual está representada por ```javascript this.ppu.scanline```
   responses:
   - ...questions
 
