--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
@@ -15,7 +15,7 @@ main:
         `0x3F00 + paletteId * 4`
         (llamemos a esto `startAddress`)
       **->** lee el índice de color de la memoria:
-        lee desde la dirección PPU `startAddress` + `colorIndex`
+        lee desde la dirección PPU ```javascript startAddress + colorIndex```
         (llamemos a esto `masterColorIndex`)
       **->** devuelve un color de la paleta maestra, usando `masterColorIndex`
         (puedes importar y usar 📄  ~/lib/ppu/masterPalette.js~ para la lista de colores)
