--- a/src/data/levels/05b_PPU/25_Mapper tick/chat/en.yml
+++ b/src/data/levels/05b_PPU/25_Mapper tick/chat/en.yml
@@ -13,7 +13,7 @@ simple:
   - |-
     📚  in `PPU`, add this method:
       **onLoad(mapper)**:
-        **->** saves the parameter as a property (`this.mapper`)
+        **->** saves the parameter as a property (```javascript this.mapper```)
   - |-
     📚  add at the end of the `_onPreLine()` and `_onVisibleLine()`:
       ```javascript if (this.cycle === 260) this.mapper.tick();```
