--- a/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
+++ b/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
@@ -13,7 +13,7 @@ simple:
   - |-
     📚  en `PPU`, añade este método:
       **onLoad(mapper)**:
-        **->** guarda el parámetro como una propiedad (`this.mapper`)
+        **->** guarda el parámetro como una propiedad (```javascript this.mapper```)
   - |-
     📚  añade al final de `_onPreLine()` y `_onVisibleLine()`:
       ```javascript if (this.cycle === 260) this.mapper.tick();```
