--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -28,8 +28,8 @@ define:
     📚  implement these methods in `PPUAddr`:
     **onLoad()**:
       **->** initializes two properties:
-        `this.latch = false`
-        `this.address = 0`
+        ```javascript this.latch = false```
+        ```javascript this.address = 0```
         (we'll use these to model the alternating behavior between high byte / low byte on every write operation)
     **onWrite(value)**:
       **->** if `latch` is ```javascript false```:
@@ -43,15 +43,15 @@ define:
   - |-
     📚  implement these methods in `PPUData`:
     **onWrite(value)**:
-      **->** writes `value` to the PPU memory address `ppuAddr.address`
-        (you can access the `PPUMemory` instance with `this.ppu.memory`)
-        (you can access the `PPUAddr` instance with `this.ppu.registers.ppuAddr`)
-      **->** calls `this._incrementAddress()`
+      **->** writes `value` to the PPU memory address ```javascript ppuAddr.address```
+        (you can access the `PPUMemory` instance with ```javascript this.ppu.memory```)
+        (you can access the `PPUAddr` instance with ```javascript this.ppu.registers.ppuAddr```)
+      **->** calls ```javascript this._incrementAddress()```
     **_incrementAddress()**:
-      **->** if `ppuCtrl.vramAddressIncrement32` is ~1~:
-        **->** increments `ppuAddr.address` by 32
+      **->** if ```javascript ppuCtrl.vramAddressIncrement32``` is ~1~:
+        **->** increments ```javascript ppuAddr.address``` by 32
       **->** if not:
-        **->** increments `ppuAddr.address` 1 time
+        **->** increments ```javascript ppuAddr.address``` 1 time
      **[!]** make sure the address never exceeds 65535 by using `byte.toU16(...)`
   - |-
     📚  lastly, modify in `PPUStatus`:
