--- a/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/en.yml
+++ b/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/en.yml
@@ -41,8 +41,8 @@ vertical:
   messages:
   - vertical flip is similar, but it has a little quirk
   - to take into account ~8x16~ sprites, we should use the Y coordinate <inside the current tile>
-  - first define a `tileInsideY = insideY % 8;`
+  - first define a ```javascript tileInsideY = insideY % 8;```
   - |-
     then, as the last argument of `Tile`'s constructor, use:
-      `sprite.flipY ? 7 - tileInsideY : tileInsideY`
+      ```javascript sprite.flipY ? 7 - tileInsideY : tileInsideY```
   responses: []
